Principles_and_Techinques_of_Compilers/lab1/Code/syntax.output
Terminals unused in grammar

   LOWER_THAN_ELSE


State 25 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag LC error RC

   15 OptTag: %empty
   16       | ID

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec
   26        | error COMMA

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | LC error RC

   30 StmtList: %empty
   31         | Stmt StmtList

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI
   39     | RETURN error SEMI
   40     | IF LP error RP
   41     | WHILE LP error RP

   42 DefList: %empty
   43        | Def DefList

   44 Def: Specifier DecList SEMI
   45    | Specifier error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | LP error RP
   69    | ID LP error RP
   70    | Exp LB error RB

   71 Args: Exp COMMA Args
   72     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 20 23 26 29 38 39 40 41 45 68 69 70
INT (258) 19 66
FLOAT (259) 67
ID (260) 16 17 18 21 22 23 61 62 64 65 69
SEMI (261) 4 5 7 32 34 38 39 44 45
COMMA (262) 9 24 26 47 71
ASSIGNOP (263) 49 50
RELOP (264) 53
PLUS (265) 54
MINUS (266) 55 59
STAR (267) 56
DIV (268) 57
AND (269) 51
OR (270) 52
NOT (271) 60
DOT (272) 64
LP (273) 21 22 23 35 36 37 40 41 58 61 62 68 69
RP (274) 21 22 23 35 36 37 40 41 58 61 62 68 69
LB (275) 19 20 63 70
RB (276) 19 20 63 70
LC (277) 12 14 28 29
RC (278) 12 14 28 29
IF (279) 35 36 40
ELSE (280) 36
STRUCT (281) 12 13 14
WHILE (282) 37 41
RETURN (283) 34 39
TYPE (284) 10
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 3
ExtDef (34)
    on left: 4 5 6 7, on right: 3
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 27 44 45
StructSpecifier (37)
    on left: 12 13 14, on right: 11
OptTag (38)
    on left: 15 16, on right: 12 14
Tag (39)
    on left: 17, on right: 13
VarDec (40)
    on left: 18 19 20, on right: 8 9 19 20 27 48 49
FunDec (41)
    on left: 21 22 23, on right: 6
VarList (42)
    on left: 24 25 26, on right: 21 24
ParamDec (43)
    on left: 27, on right: 24 25
CompSt (44)
    on left: 28 29, on right: 6 33
StmtList (45)
    on left: 30 31, on right: 28 31
Stmt (46)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 31 35 36 37
DefList (47)
    on left: 42 43, on right: 12 28 43
Def (48)
    on left: 44 45, on right: 43
DecList (49)
    on left: 46 47, on right: 44 47
Dec (50)
    on left: 48 49, on right: 46 47
Exp (51)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70, on right: 32 34 35 36 37 49 50 51 52 53 54 55 56 57 58
    59 60 63 64 70 71 72
Args (52)
    on left: 71 72, on right: 61 71


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   16 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 20


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 20

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . error RC

    error   shift, and go to state 27
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 42 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 29
    Def              go to state 30


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   23       | ID LP . error RP

    error   shift, and go to state 31
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 18


State 24

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 38
    INT    shift, and go to state 39


State 25

   28 CompSt: LC . DefList StmtList RC
   29       | LC . error RC

    error   shift, and go to state 40
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 42 (DefList)]
    INT     reduce using rule 42 (DefList)
    FLOAT   reduce using rule 42 (DefList)
    ID      reduce using rule 42 (DefList)
    MINUS   reduce using rule 42 (DefList)
    NOT     reduce using rule 42 (DefList)
    LP      reduce using rule 42 (DefList)
    LC      reduce using rule 42 (DefList)
    RC      reduce using rule 42 (DefList)
    IF      reduce using rule 42 (DefList)
    WHILE   reduce using rule 42 (DefList)
    RETURN  reduce using rule 42 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   14 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 42


State 28

   44 Def: Specifier . DecList SEMI
   45    | Specifier . error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 36

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 30

   43 DefList: Def . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 30


State 31

   23 FunDec: ID LP error . RP
   26 VarList: error . COMMA

    COMMA  shift, and go to state 49
    RP     shift, and go to state 50


State 32

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 33

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 51


State 34

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 35

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 25 (VarList)


State 36

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 37

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 38

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 54


State 39

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 55


State 40

   29 CompSt: LC error . RC

    RC  shift, and go to state 56


State 41

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 25
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    RETURN  shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


State 42

   14 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 43

   45 Def: Specifier error . SEMI

    SEMI  shift, and go to state 71


State 44

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 24

    $default  reduce using rule 48 (Dec)


State 45

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


State 46

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 46 (DecList)


State 47

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 48

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 49

   26 VarList: error COMMA .

    $default  reduce using rule 26 (VarList)


State 50

   23 FunDec: ID LP error RP .

    $default  reduce using rule 23 (FunDec)


State 51

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 27 (ParamDec)


State 52

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 53

   24 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 75
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 35


State 54

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 55

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 56

   29 CompSt: LC error RC .

    $default  reduce using rule 29 (CompSt)


State 57

   38 Stmt: error . SEMI

    SEMI  shift, and go to state 77


State 58

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 59

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 60

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .
   69    | ID . LP error RP

    LP  shift, and go to state 78

    $default  reduce using rule 65 (Exp)


State 61

   59 Exp: MINUS . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 79


State 62

   60 Exp: NOT . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 80


State 63

   58 Exp: LP . Exp RP
   68    | LP . error RP

    error  shift, and go to state 81
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 82


State 64

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP error RP

    LP  shift, and go to state 83


State 65

   37 Stmt: WHILE . LP Exp RP Stmt
   41     | WHILE . LP error RP

    LP  shift, and go to state 84


State 66

   34 Stmt: RETURN . Exp SEMI
   39     | RETURN . error SEMI

    error  shift, and go to state 85
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 86


State 67

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 68

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 87


State 69

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 25
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    RETURN  shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 88
    Stmt      go to state 69
    Exp       go to state 70


State 70

   32 Stmt: Exp . SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   70    | Exp . LB error RB

    SEMI      shift, and go to state 89
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 71

   45 Def: Specifier error SEMI .

    $default  reduce using rule 45 (Def)


State 72

   49 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 100


State 73

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 74

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 44
    DecList  go to state 101
    Dec      go to state 46


State 75

   26 VarList: error . COMMA

    COMMA  shift, and go to state 49


State 76

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 77

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


State 78

   61 Exp: ID LP . Args RP
   62    | ID LP . RP
   69    | ID LP . error RP

    error  shift, and go to state 102
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 103

    Exp   go to state 104
    Args  go to state 105


State 79

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   70    | Exp . LB error RB

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    DOT   shift, and go to state 98
    LB    shift, and go to state 99

    $default  reduce using rule 59 (Exp)


State 80

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   70    | Exp . LB error RB

    DOT  shift, and go to state 98
    LB   shift, and go to state 99

    $default  reduce using rule 60 (Exp)


State 81

   68 Exp: LP error . RP

    RP  shift, and go to state 106


State 82

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   70    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    RP        shift, and go to state 107
    LB        shift, and go to state 99


State 83

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt
   40     | IF LP . error RP

    error  shift, and go to state 108
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 109


State 84

   37 Stmt: WHILE LP . Exp RP Stmt
   41     | WHILE LP . error RP

    error  shift, and go to state 110
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 111


State 85

   39 Stmt: RETURN error . SEMI
